--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -26,6 +26,9 @@
         </activity>
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
+
+        <meta-data android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyC6UDM8O3wlMa5SNLHfcM8MGEFJ3ejc55U"/>
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
