--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   flutter_signin_button: ^2.0.0
   geolocator: ^9.0.1
   flutter_geofire: ^2.0.3
+  google_maps_flutter_web:
   flutter_polyline_points: ^1.0.0
   maps_toolkit: ^2.0.0
   location: ^4.4.0
