--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -39,7 +39,9 @@
         </activity>
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
-
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_channel_id"
+            android:value="your_default_channel_id" />
         <meta-data android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyC6UDM8O3wlMa5SNLHfcM8MGEFJ3ejc55U"/>
         <meta-data
